[package]
name = "clarity"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"
rust-version = "1.72"
homepage = "https://github.com/matthewjberger/clarity"
repository = "https://github.com/matthewjberger/clarity"
license = "MIT"


[dependencies]
egui = "0.26.1"
eframe = { version = "0.26.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.20"
rfd = "0.13.0"
serde = { version = "1", features = ["derive"] }
futures = "0.3.30"
petgraph = { version = "0.6.4", features = ["serde-1"] }
nalgebra-glm = { version = "0.18.0", features = ["serde-serialize", "convert-bytemuck"] }
bytemuck = { version = "1.14.3", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
